# STARTER-TAURI-VITE-VUE3-TYPESCRIPT

./: README.md  components.d.ts  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ButtonClick.vue  Greet.vue
src/layouts/: DefaultLayout.vue
